demo_app/01_plain/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plain-app-service
spec:
  type: LoadBalancer
  selector:
    app: plain-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
