demo_app/01_plain/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: plain-app-service
          servicePort: 80
